fixed scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,6 +155,7 @@ li {
 /* Custom scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
